<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:padding="16dp"
        android:src="@drawable/ic_logo1" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/usuario"
        android:textColor="@color/laranja"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/senha"
        android:textColor="@color/laranja"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHighlight="@color/laranja"/>
    <Button
        android:id="@+id/btnAva"
        android:layout_marginTop="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acessoAva"
        android:background="@color/laranja"
        android:textColor="@android:color/white"/>


</LinearLayout>